--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
         <div class="contact">
             
             <h2>We are hiring!</h2>
-            <p>We are looking for talent in the computer vision domain. Email your resume to <a href="mailto:support@vigilant.live">support@vigilant.live</a></p>
+            <p>We are looking for talent in the computer vision domain. Email your resume to <a href="mailto:support@vigilanteye.live">support@vigilanteye.live</a></p>
 
             <h3>Contact Us</h3>
-            <p>Email: <a href="mailto:support@vigilant.live">support@vigilanteye.live</a><br>
+            <p>Email: <a href="mailto:support@vigilanteye.live">support@vigilanteye.live</a><br>
                 Follow us on <a href="https://www.linkedin.com/company/vigilant-eye-ai" target="_blank">LinkedIn</a></p>
         </div>
     </div>
