--- a/index.html
+++ b/index.html
@@ -71,6 +71,14 @@
                 Follow us on <a href="https://www.linkedin.com/company/vigilant-eye-ai" target="_blank">LinkedIn</a></p>
         </div>
     </div>
+
+    <!-- Logos Section -->
+    <div style="margin-top: 30px; text-align: center;">
+        <p style="font-size: 14px; margin-bottom: 10px;"><b>Backed by</b></p><br>
+        <img src="media/nvidia.png" alt="NVIDIA Logo" style="height: 40px; margin: 0 20px;">
+        <img src="media/beta_uni.png" alt="Beta University Logo" style="height: 40px; margin: 0 20px;">
+    </div>
+
     <footer>
         &copy; 2025 Vigilant Eye. All Rights Reserved.
     </footer>
