--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             background-color: rgba(34, 34, 34, 0.8);
             color: #fff;
             padding: 20px;
-            font-size: 24px;
+            font-size: 30px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -36,10 +36,11 @@
             border-radius: 10px;
         }
         footer {
-            margin-top: 50px;
-            padding: 20px;
+            margin-top: 60px;
+            padding: 15px;
             background-color: rgba(34, 34, 34, 0.8);
             color: #fff;
+            font-size: 12px; /* Reduced font size */
         }
         .contact {
             margin-top: 20px;
@@ -49,7 +50,7 @@
 <body>
     <header>
         <!-- <img src="appicon.png" alt="Vigilant Eye Logo"> -->
-        Vigilant Eye
+        <b>Vigilant Eye</b>
     </header>
     <div class="container">
         <h1>Autonomous AI Employees for the Modern Enterprise</h1>
