--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <p>Vigilant Eye is building full-time AI employees — autonomous digital workers that operate independently across enterprise functions.
             They don’t assist. They execute.</p>
             
-        <p>We’ve onboarded two early pilot partners to help shape and deploy these AI workers inside real organizations, 
+        <p>We’ve onboarded two early pilot partners to help shape and deploy these AI workers inside real organizations, <br>
             <a href="mailto:support@vigilant.live?subject=Q3 Pilot Interest"; text-decoration: underline;">onboarding pilots for Q3 now</a>.</p>
         
         <p>See how our AI employee joins meetings, completes tasks, and drives execution — no prompts required: <br>
