--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             They don’t assist. They execute.</p>
             
         <p>We’ve onboarded two early pilot partners to help shape and deploy these AI workers inside real organizations, <br>
-            <a href="mailto:support@vigilant.live?subject=Q3 Pilot Interest"; text-decoration: underline;">onboarding pilots for Q3 now</a>.</p>
+            <a href="mailto:kunal@vigilanteye.live?subject=Q3 Pilot Interest"; text-decoration: underline;">onboarding pilots for Q3 now</a>.</p>
         
         <p>See how our AI employee joins meetings, completes tasks, and drives execution — no prompts required: <br>
         <a href="https://youtu.be/iLv7m-3n8Gk" target="_blank">Watch AI Employee in Action</a></p>
@@ -74,7 +74,7 @@
 
         <h2>We are hiring!</h2>
         <p>We’re looking for hands-on talent in AI infrastructure, agent design, and real-world automation. <br>
-            If you build with intent and don’t fear blank slates, get in touch: <a href="mailto:kunal@vigilant.live">kunal@vigilant.live</a></p>
+            If you build with intent and don’t fear blank slates, get in touch: <a href="mailto:kunal@vigilanteye.live">kunal@vigilant.live</a></p>
 
         </div>
 
@@ -92,7 +92,7 @@
     <!-- Footer -->
     <footer style="display: flex; justify-content: center; align-items: center; background-color: rgba(34, 34, 34, 0.8); color: #fff; padding: 15px; position: relative; flex-direction: column;">
     <div style="position: absolute; right: 20px;">
-        <a href="mailto:kunal@vigilant.live" target="_blank" style="margin-right: 10px; color: #fff; text-decoration: none;">
+        <a href="mailto:kunal@vigilanteye.live" target="_blank" style="margin-right: 10px; color: #fff; text-decoration: none;">
             <img src="media/email_icon.png" alt="Email" style="height: 20px; vertical-align: middle;">
         </a>
         <a href="https://www.linkedin.com/company/vigilant-eye-ai" target="_blank" style="color: #fff; text-decoration: none;">
