--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
         <h2>We are hiring!</h2>
         <p>We’re looking for hands-on talent in AI infrastructure, agent design, and real-world automation. <br>
-            If you build with intent and don’t fear blank slates, get in touch: <a href="mailto:kunal@vigilanteye.live">kunal@vigilant.live</a></p>
+            If you build with intent and don’t fear blank slates, get in touch: <a href="mailto:kunal@vigilanteye.live">kunal@vigilanteye.live</a></p>
 
         </div>
 
