--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vigilant Eye</title>
-    <link rel="icon" href="appicon.png" type="image/png">
+    <link rel="icon" href="media/logo.png" type="image/png">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -17,7 +17,7 @@
         header {
             background-color: rgba(34, 34, 34, 0.8);
             color: #fff;
-            padding: 15px;
+            padding: 10px;
             font-size: 28px;
             display: flex;
             align-items: center;
@@ -82,6 +82,7 @@
 <body>
     <header>
         <!-- <img src="appicon.png" alt="Vigilant Eye Logo"> -->
+        <img src="media/logo.png" alt="Vigilant Eye Logo" style="height: 50px; margin-right: 10px;">
         <b>Vigilant Eye</b>
     </header>
     <div class="container">
