--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
         <p style="font-size: 14px; margin-bottom: 10px;"><b>Backed by</b></p><br>
         <img src="media/nvidia.png" alt="NVIDIA Logo" style="height: 40px; margin: 0 20px;">
         <img src="media/beta_uni.png" alt="Beta University Logo" style="height: 40px; margin: 0 20px;">
+        <img src="media/nasdaq.png" alt="Nasdaq Logo" style="height: 40px; margin: 0 20px;">
     </div>
 
     <!-- Footer -->
